--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <a href="notes/index1.html"><i class="fas fa-sticky-note icon"></i> Notes</a>
     </div>
     <div class="card">
-      <a href="alphabet-position/index.html"><i class="fas fa-gamepad icon"></i> Word Game</a>
+      <a href="alphabet-position/index.html"><i class="fas fa-gamepad icon"></i> Alphabet Position</a>
     </div>
   </div>
 </body>
