--- a/alphabet-position/index.html
+++ b/alphabet-position/index.html
@@ -16,7 +16,7 @@
     color:#0f172a;
     display: flex;
     justify-content: center;
-    align-items: center;
+    /*align-items: center;*/
     min-height: 100vh;
   }
   .wrap {
