--- a/alphabet-position/index.html
+++ b/alphabet-position/index.html
@@ -16,8 +16,8 @@
     color:#0f172a;
     display: flex;
     justify-content: center;
-    /*align-items: center;*/
-    min-height: 100vh;
+    /*align-items: center;
+    min-height: 100vh;*/
   }
   .wrap {
     max-width:420px;
